# gicisky-tag

./: .gitattributes  .gitignore  README.md  pyproject.toml
docs/: atc1441_uploader.html  ble-tag-protocol.html
gicisky_tag/: cli.py  encoder.py  scanner.py  writer.py
